# platypus

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TLS-CONFIG.md  release-plz.toml
.github/workflows/: docker-image.yml
examples/: component_from_template.rs
sql/: create_partition.sql
src/: main.rs  metrics.rs
src/common/: config.rs  error.rs  hub.rs  metrics.rs  mod.rs  persist.rs
src/model/: mod.rs
src/model/component/: mod.rs  product.rs  service.rs
src/model/tmf/: mod.rs  tmf620_catalog_management.rs  tmf622_product_order_manaagement.rs  tmf622_product_order_management.rs  tmf629_customer_management.rs  tmf632_party_management.rs  tmf674_geographic_site.rs
src/model/tmf/tmf620/: mod.rs  tmf620_catalog_management.rs
src/model/tmf/tmf622/: mod.rs  tmf622_product_order_management.rs
src/model/tmf/tmf629/: mod.rs  tmf629_customer_management.rs
src/model/tmf/tmf632/: mod.rs  tmf632_party_management.rs
src/model/tmf/tmf633/: mod.rs  tmf633_service_catalog_management.rs
src/model/tmf/tmf637/: mod.rs  tmf637_product_inventory_management.rs
src/model/tmf/tmf638/: mod.rs  tmf638_service_inventory_management.rs
src/model/tmf/tmf639/: mod.rs  tmf639_resource_inventory_management.rs
src/model/tmf/tmf645/: mod.rs  tmf645_service_qualification_management.rs
src/model/tmf/tmf648/: mod.rs  tmf648_quote_management.rs
src/model/tmf/tmf663/: mod.rs  tmf663_shopping_cart.rs
src/model/tmf/tmf674/: mod.rs  tmf674_geographic_site.rs
src/template/: component.rs  mod.rs  product.rs
