[package]
name = "platypus"
version = "0.1.6"
edition = "2024"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "API layer on top of TMF620 to provide product composition"
repository = "https://github.com/rruckley/platypus"
keywords = ["tmf"]

[features]
core = ["tmf620","tmf622","tmf629","tmf632","tmf633","tmf645","tmf648","tmf674"]
composable = ["core"]
events = []
tmf620 = ["tmflib/tmf620"]
tmf622 = ["tmflib/tmf622"]
tmf629 = ["tmflib/tmf629"]
tmf632 = ["tmflib/tmf632"]
tmf633 = ["tmflib/tmf633"]
tmf645 = ["tmflib/tmf645"]
tmf648 = ["tmflib/tmf648"]
tmf674 = ["tmflib/tmf674"]

v4 = ["tmflib/build-V4"]
v5 = ["tmflib/build-V5"]
default = ["core","v4","events"]

[dependencies]
actix-web = { version = "4.6.0", features = ["rustls-0_23"]}
actix-web-prom = "0.9.0"
env_logger = "0.11"
etag = "4.0.0"
log = "0.4.21"
rustls = "0.23"
rustls-pemfile = "2.2.0"
serde = "1.0.202"
serde_json = "1.0.117"
surrealdb = {version = "2.2.1"}
tmflib = { git = "https://github.com/rruckley/tmflib.git"}
