[package]
name = "platypus"
version = "0.1.8"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "API layer on top of TMF620 to provide product composition"
repository = "https://github.com/rruckley/platypus"
keywords = ["tmf"]

[features]
core = ["tmf620","tmf622","tmf629","tmf632","tmf633","tmf645","tmf648","tmf663","tmf674"]
composable = ["core"]
events = []
tmf620 = ["tmflib/tmf620"]
tmf622 = ["tmflib/tmf622"]
tmf629 = ["tmflib/tmf629"]
tmf632 = ["tmflib/tmf632"]
tmf633 = ["tmflib/tmf633"]
tmf645 = ["tmflib/tmf645"]
tmf648 = ["tmflib/tmf648"]
tmf663 = ["tmflib/tmf663"]
tmf674 = ["tmflib/tmf674"]

v4 = ["tmflib/build-V4"]
v5 = ["tmflib/build-V5"]
default = ["core","v4","events"]

[dependencies]
actix-web = { version = "4.11.0", features = ["rustls-0_23"]}
actix-web-prom = "0.10.0"
env_logger = "0.11.8"
etag = "4.0.0"
log = "0.4.27"
rustls = "0.23.27"
rustls-pemfile = "2.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
surrealdb = {version = "2.3.3"}
# tmflib = { git = "https://github.com/rruckley/tmflib.git"}
tmflib = "0.1.30"
uuid = { version = "1.17.0", features = ["v4"] }
