[package]
name = "platypus"
version = "0.1.11"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "Persistence layer for TMF APIs"
repository = "https://github.com/rruckley/platypus"
keywords = ["TMF,SurrealDB,Actix-Web,Rust"]

[features]
core = ["tmf620","tmf622","tmf629","tmf632","tmf633","tmf638","tmf639","tmf645","tmf648","tmf663","tmf674"]
db_pgsql = ["sqlx"]
db_surreal = ["surrealdb"]
composable = ["core","db_pgsql"]
events = []
tmf620 = ["tmflib/tmf620"]
tmf622 = ["tmflib/tmf622"]
tmf629 = ["tmflib/tmf629"]
tmf632 = ["tmflib/tmf632"]
tmf633 = ["tmflib/tmf633"]
tmf637 = ["tmflib/tmf637"]
tmf638 = ["tmflib/tmf638"]
tmf639 = ["tmflib/tmf639"]
tmf645 = ["tmflib/tmf645"]
tmf648 = ["tmflib/tmf648"]
tmf663 = ["tmflib/tmf663"]
tmf674 = ["tmflib/tmf674"]

v4 = ["tmflib/build-V4"]
v5 = ["tmflib/build-V5"]
default = ["core","v4","events","db_pgsql"]

[dependencies]
actix-web = { version = "4.13.0", features = ["rustls-0_23"]}
actix-web-prom = "0.10.0"
env_logger = "0.11.10"
etag = "4.0.0"
log = "0.4.28"
rustls = "0.23.38"
rustls-pemfile = "2.2.0"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", optional = true}
surrealdb = {version = "3.0.5", optional = true}
# tmflib = { git = "https://github.com/rruckley/tmflib.git"}
tmflib = "0.1.38"
uuid = { version = "1.23.1", features = ["v4"] }
